# SimpleCRM

./: .gitignore  README.md  pyproject.toml
API/: serializers.py  tests.py  urls.py  views.py
SimpleCRM/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
accounts/: tests.py  urls.py
accounts/templates/accounts/: login.html  logout.html
accounts/templates/accounts/parts/: message.html  user.html
accounts/views/: __init__.py  login.py  logout.py
core/: forms.py  models.py  tasks.py  urls.py
core/templates/core/: add_person.html  main_page.html  person.html  search.html
core/templates/core/parts/: menu.html
core/tests/: test_data.py  test_models.py  test_tasks.py  test_views.py
core/views/: __init__.py  add_person.py  mq.py  person.py  search.py  views.py
service/: fill_DB.py  requirments.txt
