[tool.poetry]
name = "scrm"
version = "0.1.0"
description = ""
authors = ["Iudjin <iudjingellar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.1.11"
djangorestframework = "3.14.0"
mimesis = "11.1.0"
drf-yasg = "1.21.7"
psycopg2 = "2.9.9"
celery = '5.3.6'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
